// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCodeFrames > end 1`] = `
"
1  |  import foo from './foo'
   |  ^
2  |  foo()
"
`;

exports[`generateCodeFrames > end 2`] = `
"
1  |  import foo from './foo'
   |  ^^^^^^^^^^^^^^^^^^^^^^^
2  |  foo()
"
`;

exports[`generateCodeFrames > end 3`] = `
"
1  |  import foo from './foo'
   |  ^^^^^^^^^^^^^^^^^^^^^^^
2  |  foo()
   |  ^^^^^
"
`;

exports[`generateCodeFrames > end 4`] = `
"
1  |  import foo from './foo'
   |  ^^^^^^^^^^^^^^^^^^^^^^^
2  |  foo()
   |  ^^^^^
"
`;

exports[`generateCodeFrames > end 5`] = `
"
1  |  import foo from './foo'
   |  ^^^^^^^^^^^^^^^^^^^^^^^
2  |  foo()
   |  ^^^^^
"
`;

exports[`generateCodeFrames > end 6`] = `
"
1  |  import foo from './foo'
   |  ^^^^^^^^^^^^^^^^^^^^^^^
2  |  foo()
   |  ^^^^^
"
`;

exports[`generateCodeFrames > invalid start > end 1`] = `
"
1  |  import foo from './foo'
   |    ^
2  |  foo()
"
`;

exports[`generateCodeFrames > range 1`] = `
"
1  |  import foo from './foo'
2  |  
3  |  foo()
   |  ^
4  |  // 1
5  |  // 2
"
`;

exports[`generateCodeFrames > range 2`] = `
"
1  |  import foo from './foo'
2  |  
3  |  foo()
   |  ^^^^^
4  |  // 1
   |  ^
5  |  // 2
"
`;

exports[`generateCodeFrames > start with number 1`] = `
"
1  |  import foo from './foo'
   |  ^
2  |  foo()
"
`;

exports[`generateCodeFrames > start with number 2`] = `
"
1  |  import foo from './foo'
   |  ^
2  |  foo()
"
`;

exports[`generateCodeFrames > start with number 3`] = `
"
1  |  import foo from './foo'
   |   ^
2  |  foo()
"
`;

exports[`generateCodeFrames > start with number 4`] = `
"
1  |  import foo from './foo'
2  |  foo()
   |  ^
"
`;

exports[`generateCodeFrames > start with postion 1`] = `
"
1  |  import foo from './foo'
   |  ^
2  |  foo()
"
`;

exports[`generateCodeFrames > start with postion 2`] = `
"
1  |  import foo from './foo'
   |   ^
2  |  foo()
"
`;

exports[`generateCodeFrames > start with postion 3`] = `
"
1  |  import foo from './foo'
2  |  foo()
   |  ^
"
`;

exports[`generateCodeFrames > works with CRLF 1`] = `
"
1  |  import foo from './foo'
2  |  foo()
   |  ^
"
`;
